# github-action

./: $  .coverage  .cursorrules  .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  COMMIT_MESSAGE.txt  Dockerfile  README.md  SECURITY.md  action.yml  bitbucket-pipelines.yml  debian-enriched-test.cdx.json  debian-test.cdx.json  enriched_sbom.cdx.json  entrypoint.py  entrypoint.sh  hatch_build.py  package.json  pipe.yml  pyproject.toml  sbom_output.json  sbomify-action.cdx.json  sbomify.sh  sbomify_tests.sh  test_cargo_generation.json  test_conan_generation.json  test_docker_image_generation.json  test_generation.json
.github/: CODEOWNERS
.github/actions/determine-version/: action.yml
.github/workflows/: docker_build.yaml  docker_registry.yaml  dockerfile_tests.yaml  integration_tests.yaml  license-db.yaml  pypi.yaml  sanity_checks.yaml  sbomify.yaml  shellcheck.yaml
docs/: enrichment_coverage.md  ntia_comparison.md
docs/adr/: 0001-plugin-architecture.md
sbomify_action/: __init__.py  additional_packages.py  augmentation.py  console.py  enrichment.py  exceptions.py  generation.py  http_client.py  logging_config.py  serialization.py  spdx3.py  tool_checks.py  upload.py  validation.py
sbomify_action/_augmentation/: __init__.py  collector.py  data.py  metadata.py  protocol.py  registry.py  utils.py
sbomify_action/_augmentation/providers/: __init__.py  bitbucket.py  github.py  gitlab.py  json_config.py  sbomify_api.py
sbomify_action/_augmentation/sources/: __init__.py  cargo.py  local_json.py  package_json.py  pyproject.py  sbomify_api.py
sbomify_action/_dependency_expansion/: __init__.py  enricher.py  models.py  protocol.py  registry.py
sbomify_action/_dependency_expansion/expanders/: __init__.py  pipdeptree.py
sbomify_action/_enrichment/: __init__.py  enricher.py  license_db_generator.py  license_normalizer.py  license_utils.py  lifecycle_data.py  metadata.py  protocol.py  registry.py  sanitization.py  utils.py
sbomify_action/_enrichment/sources/: __init__.py  clearlydefined.py  conan.py  cratesio.py  debian.py  depsdev.py  ecosystems.py  (+9 more)
sbomify_action/_generation/: __init__.py  generator.py  protocol.py  registry.py  result.py  utils.py  validation.py
sbomify_action/_hash_enrichment/: __init__.py  enricher.py  models.py  protocol.py  registry.py
sbomify_action/_processors/: __init__.py  orchestrator.py  protocol.py  registry.py  releases_api.py  result.py
sbomify_action/_upload/: __init__.py  orchestrator.py  protocol.py  registry.py  result.py
sbomify_action/_yocto/: __init__.py  api.py  archive.py  models.py  parser.py  pipeline.py
sbomify_action/cli/: __init__.py  main.py  tea.py
scripts/: analyze_sboms.py  comprehensive_sbom_test.py  generate_additional_packages.sh  generate_all_sboms.sh  generate_ntia_comparison.py  test_license_sanitization.sh  test_rpm_enrichment_e2e.py
tests/: conftest.py  cra_checker.py  ntia_checker.py  test_additional_packages.py  test_api_endpoint_audit.py  test_augmentation_module.py  test_augmentation_providers.py  test_augmentation_sources.py  test_ci_providers.py  test_cli.py  test_commands.py  test_conan_source.py  test_config.py  test_console.py  test_container_sbom_ntia_compliance.py  test_cra_compliance.py  test_cratesio_source.py  test_cyclonedx_cargo_generator.py  test_debian_source.py  test_dependency_expansion.py  test_ecosystems_enrichment.py  test_enrichment.py  test_enrichment_module.py  test_entrypoint.py  test_generation_plugin.py  test_hash_enrichment.py  test_http_client.py  test_integration.py  test_json_augmentation.py  test_license_db_cache.py  test_license_normalizer.py  test_license_utils.py  test_lifecycle_enrichment.py  test_ntia_compliance.py  test_path_expansion.py  test_processors.py  test_releases.py  test_rpmrepo_integration.py  test_rpmrepo_source.py  test_sanitization.py  (+20 more)
tests/test-data/: Pipfile  almalinux_8-minimal_cdxgen.cdx.json  almalinux_8-minimal_syft.cdx.json  almalinux_8-minimal_syft.spdx.json  almalinux_8-minimal_trivy.cdx.json  almalinux_8-minimal_trivy.spdx.json  almalinux_9-minimal_cdxgen.cdx.json  almalinux_9-minimal_syft.cdx.json  almalinux_9-minimal_syft.spdx.json  almalinux_9-minimal_trivy.cdx.json  almalinux_9-minimal_trivy.spdx.json  alpine-syft.cdx.json  alpine-syft.spdx.json  alpine-trivy.cdx.json  alpine-trivy.spdx.json  alpine_3.18_cdxgen.cdx.json  alpine_3.18_syft.cdx.json  alpine_3.18_syft.spdx.json  alpine_3.18_trivy.cdx.json  alpine_3.18_trivy.spdx.json  alpine_3.19_cdxgen.cdx.json  alpine_3.19_syft.cdx.json  alpine_3.19_syft.spdx.json  alpine_3.19_trivy.cdx.json  alpine_3.19_trivy.spdx.json  alpine_3.20_cdxgen.cdx.json  alpine_3.20_syft.cdx.json  alpine_3.20_syft.spdx.json  alpine_3.20_trivy.cdx.json  alpine_3.20_trivy.spdx.json  alpine_3.21_cdxgen.cdx.json  alpine_3.21_syft.cdx.json  alpine_3.21_syft.spdx.json  alpine_3.21_trivy.cdx.json  alpine_3.21_trivy.spdx.json  amazonlinux_2023_cdxgen.cdx.json  amazonlinux_2023_syft.cdx.json  amazonlinux_2023_syft.spdx.json  amazonlinux_2023_trivy.cdx.json  amazonlinux_2023_trivy.spdx.json  (+119 more)
(+36 files in other folders)
