[tool.poetry]
name = "sbomify-github-action"
version = "0.3.0"
description = "GitHub Actions module for generating, augmenting and distributing SBOMs"
authors = ["sbomify <hello@sbomify.com>"]
readme = "README.md"
packages = [{include = "sbomify_action"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
cyclonedx-bom = "^6.1.1"
sentry-sdk = "^2.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
sbomify-action = "sbomify_action.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=sbomify_action --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

