[project]
name = "sbomify-github-action"
version = "0.5.0"
description = "GitHub Actions module for generating, augmenting and distributing SBOMs"
authors = [{ name = "sbomify", email = "hello@sbomify.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "cyclonedx-bom>=6.1.1,<7",
    "sentry-sdk>=2.21.0,<3",
]

[project.scripts]
sbomify-action = "sbomify_action.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
    "ruff>=0.12.0,<0.13",
    "pre-commit>=4.2.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["sbomify_action"]

[tool.hatch.build.targets.wheel]
include = ["sbomify_action"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=sbomify_action --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

